Apply OpenRewrite recipes.